reformated contact page

--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
 						 <span class="icon-bar"></span>
 						 <span class="icon-bar"></span>
 				 </button>
-				 <a class="navbar-brand page-scroll" href="#page-top">Celine Is Awesome</a>
+				 <a class="navbar-brand page-scroll" href="#page-top">Welcome to my Portfolio</a>
 		 </div>
 
 		 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,8 +78,8 @@
 <div class="about" id="about">
 <div class="os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0s">
 <h2 class="about-par"> <span id="About"> About </span> </h2>
-<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. My background is in business operations and analytics. However, after a few years in the field, I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
-<p class="summary"> While I'm not developing new applications, I like to illustrate with art software programs and play video games. </p>
+<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and some analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
+<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
 </div>
 </div>
 
@@ -307,13 +307,16 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 	 </div>
 
 <div class=" col-lg-3 col-md-4 col-sm-4 col-xs-3 text-center">
-<h4> Frameworks </h4>
+<h4> Front-end Frameworks/Libraries </h4>
 <img src="css/images/ruby.png" width="100" height="100">
  <ul class="listings">
  <li> Node.js </li> <b> | </b>
  <li> Express.js </li> <b> | </b>
  <li> AngularJS </li> <b> | </b>
- <li> Ruby on Rails </li>
+ <li> Ruby on Rails </li> <b> | </b>
+ <li> React.js </li> <b> | </b>
+ <li> Bootstrap </li> <b> | </b>
+ <li> jQuery </li>
  </ul>
  </div>
 
@@ -332,10 +335,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 <img src="css/images/Photoshop.jpg" width="100" height="100">
 	 <ul class="listings">
 	 <li> Git/Github </li> <b> | </b>
-	 <li> Bootstrap </li> <b> | </b>
 	 <li> JIRA </li> <b> | </b>
 	 <li> Heroku </li> <b> | </b>
-	 <li> React.js </li> <b> | </b>
 	 <li> Photoshop </li> <b> | </b>
 	 <li> Illustrator </li>
 	 </ul>
@@ -346,20 +347,15 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 <div id="contact">
 <h2> Contact </h2>
 <div class="col-lg-6 col-md-6 col-sm-4 text-center">
- <div class="icons">
-<i class="material-icons">local_phone</i>
-	 </div>
-<li> <strong> Phone:</strong> 408-499-5531 </li>
-</div>
-<div class="col-lg-6 col-md-6 col-sm-4 text-center">
 <div>
- <i class="material-icons">mail</i>
 </div>
- <li> <strong> Email:</strong> bgabot89@gmail.com </li>
 </div>
-<h2> Want to learn more about me? Please check these links here:	</h2>
+<h2> Want to reach out to me? Please feel free to contact me through the following:	</h2>
 
 <div class="col-md-12 text-center">
+<a href="mailto:bgabot89@gmail.com">
+<img id="mail" src="css/images/email.png"></i>
+</a>
 <a href="http://www.linkedin.com/in/briangabot">
 <img id="linkedin" src="css/images/linkedin.png">
 </a>
