fixing image issue for iw-rpg

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none;overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
@@ -223,8 +223,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
@@ -275,7 +275,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st40" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 </image>
 <path id="base" class="st40" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -325,8 +325,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
