--- a/test.html
+++ b/test.html
@@ -90,65 +90,6 @@ $(function() {
 </div>
 </div>
 
-<!-- <div class="row text-center" id="Projects">
-<h2>Projects</h2>
-<div class="col-md-4">
- <div class="proj">
-	 <a href="https://shrouded-caverns-8468.herokuapp.com/">
-	 <img src="css/images/iw-rpg.png" width="300px" height="170px">
-	 </a>
- </div>
- <div class="info2 text-center">
-	 <h3>IW-RPG</h3>
-	 <p>IW-RPG is an application used to determine what type of game rpg class bests fits you. </p>
-	 Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, API, Bootstrap, Traitify API
- </div>
-</div>
-
-<div class="col-md-4">
-<div class="proj">
- <a href="http://lfg-meetup.herokuapp.com/">
- <img src="css/images/lfg.png" width="300px" height="170px">
- </a>
-</div>
-<div class="info2">
- <h3>LFG</h3>
- <p>LFG is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. I collaborated with three other group members to create a website built mainly from Ruby on Rails. On the back-end, I worked on routings, authorizations, validations and seeded data while on the front-end, I worked on CSS stylings and some design work. </p>
- Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design
-</div>
-</div>
-
-<div class="col-md-4">
-<div class="proj">
-<a href="http://collabacomic.herokuapp.com/">
-<img src="css/images/profilecollab.png" width="300px" height="170px">
- </a>
- </div>
-<div class="info2">
-<h3>Collab-A-Comic</h3>
-<p>Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. </p>
-Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer
-</div>
-</div>
-</div>
-
-<div class="row text-center" id="Projects">
-<h2>Projects</h2>
-<div class ="row" id="Projects">
-<div class="col-md-4">
-<div class="proj text-center">
- <a href="http://projectsakura.herokuapp.com/">
- <img src="css/images/projsak.png" width="300px" height="170px">
- </a>
-</div>
-	<div class="info2 text-center">
-		<h3>Project Sakura</h3>
-		 <p>Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area  </p>
-		 Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js
- </div>
-</div>
-</div> -->
-
 <div class="row text-center" id="Projects">
 <h2>Projects</h2>
 
@@ -170,8 +111,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none;overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
@@ -223,8 +164,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
@@ -275,7 +216,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st40" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 </image>
 <path id="base" class="st40" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -325,8 +266,8 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 </style>
 <path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="../../Desktop/Portfolio/css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	</image>
 <path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
@@ -361,7 +302,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
 
 <div class= "os-animation row" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id="skills">
 <h2> Skills </h2>
-	<div class= "col-lg-3 col-md-4 col-sm-4 col-xs-3 text-center" id="Skills">
+	<div class= "col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center" id="Skills">
  <h4> Languages </h4>
 	<div>
 <img src="css/images/html5.png" height="100" width="100">
@@ -374,7 +315,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
  </div>
  </div>
 
-<div class=" col-lg-3 col-md-4 col-sm-4 col-xs-3 text-center">
+<div class=" col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
 <h4> Frameworks/Libraries </h4>
 <img src="css/images/ruby.png" width="100" height="100">
  <ul class="listings">
@@ -388,7 +329,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
  </ul>
  </div>
 
-<div class="col-lg-3 col-md-4 col-sm-4 col-xs-3 text-center">
+<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
 <h4> Databases </h4>
 <img src="css/images/postgres.png" width="100" height="100">
  <ul class="listings">
@@ -398,7 +339,7 @@ Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript,
  </ul>
 </div>
 
-<div class="col-lg-3 col-md-4 col-sm-4 col-xs-3 text-center">
+<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
 <h4> Other </h4>
 <img src="css/images/Photoshop.jpg" width="100" height="100">
 	 <ul class="listings">
