--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ $(function() {
 </div>
 </div>
 
-<div class="row text-center" id="Projects">
+<div class="`row` text-center" id="Projects">
 <h2>Projects</h2>
 
 <!--Project Sakura Image-->
@@ -164,7 +164,7 @@ $(function() {
 </style>
 <path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/Persona.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 	</image>
 <path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -183,7 +183,7 @@ $(function() {
 </a>
 </image>
 <!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text>
+<text transform="matrix(1 0 0 1 -250.4999 364.2425)" class="st2 st3 st4">Persona Gamer</text>
 <!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
 <!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
 </svg>
@@ -191,9 +191,9 @@ $(function() {
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
 	<!-- <div class= "para animated bounceInRight col-md-4" id="testpp"> -->
 	<!-- class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0s" -->
- <span class="text1"> <h class= "h"> <strong> IW-RPG </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> IW-RPG is an application used to determine what type of game rpg class bests fits you. </p>
-  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, API, Bootstrap, Traitify API</strong> </p> </span>
+ <span class="text1"> <h class= "h"> <strong> Persona Gamer </strong> </h> </span> <br>
+  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. The tests were created through javascript to replicate the Personality tests from Traitify's API. </p>
+  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, Bootstrap</strong> </p> </span>
 </div>
 </div>
 
@@ -266,7 +266,7 @@ $(function() {
 </style>
 <path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/collab.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 	</image>
 <path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -276,7 +276,7 @@ $(function() {
 	C271.5,620.2,265,620.3,265,620.3z"/>
 <image style="display:none; overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
 </image>
-<image style="enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
+<image style="enable-background:new;" width="2758" height="1600" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
 </image>
 <image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
 </image>
