adding new fade in effect

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@ $(function() {
 
 
 <section class="header">
-<section class="color">
-<h1> BRIAN </h1>
-<h1> GABOT </h1>
-<ul id="list">
-<li>[web developer]</li> <b> | </b>
-<li>[illustrator]</li>
-</ul>
-</section>
+	<section class="color">
+		<h1> BRIAN </h1>
+		<h1> GABOT </h1>
+		<ul id="list">
+		<li>[web developer]</li> <b> | </b>
+		<li>[illustrator]</li>
+		</ul>
+	</section>
 </section>
 
 <div class="about" id="about">
-<div class="os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0s">
-<h2 class="about-par"> <span id="About"> About Me </span> </h2>
-<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
-<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
-</div>
+	<div class="os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0s">
+		<h2 class="about-par"> <span id="About"> About Me </span> </h2>
+			<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
+			<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
+	</div>
 </div>
 
 <div class="`row` text-center" id="Projects">
@@ -132,15 +132,12 @@ $(function() {
 	</a>
 </image>
 <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text>
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text>
-<text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
 </svg>
 </div>
 
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area   </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
   <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
 </div>
 
@@ -292,7 +289,7 @@ $(function() {
 </div>
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Collab-a-Comic </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner.   </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. The website was created through ruby on rails for the front-end and PostgreSQL for the backend.  </p>
   <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</strong> </p> </span>
 </div>
 </div>
