--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ $(function() {
 
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. At the time, I was teaching myself React.js and wanted to create an application based on it. Currently, the application is solely front-end, however, I may integrate a backend to it in the future. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
   <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
 </div>
 
@@ -189,7 +189,7 @@ $(function() {
 	<!-- <div class= "para animated bounceInRight col-md-4" id="testpp"> -->
 	<!-- class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0s" -->
  <span class="text1"> <h class= "h"> <strong> Persona Gamer </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. The tests were created through javascript to replicate the Personality tests from Traitify's API. </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. This was the first application I created. I initially used traitify's API but found the restricted use of the API hindered the usage of the site. I then decided to build a replica of Traitify's API using javascript and jQuery. </p>
   <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, Bootstrap</strong> </p> </span>
 </div>
 </div>
