--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
 
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js"></script>
 <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/animate.css/3.1.0/animate.css">
+<link href="http://cdn.bootcss.com/animate.css/3.1.0/animate.css">
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	 rel="stylesheet">
@@ -72,198 +73,35 @@ $(function() {
 <div class="`row` text-center" id="Projects">
 <h2>Projects</h2>
 
-<!--Project Sakura Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st10{fill:#E5B8D3;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image class = "image" style="enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://projectsakura.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg" transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-	</a>
-</image>
-<text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text>
-</svg>
-</div>
+<!--Image 1-->
+<figure class="snip1205 green">
+  <img src="css/images/Persona.jpg">
+  <i class="ion-search"></i>
+	<a href="#"></a>
+  <p class="proj-description">Persona Gamer</p>
+</figure>
 
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. At the time, I was teaching myself React.js and wanted to create an application based on it. Currently, the application is solely front-end, however, I may integrate a backend to it in the future. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
-  <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
-</div>
+<figure class="snip1205 green">
+  <img src="css/images/lfg-2.png">
+  <i class="ion-search"></i>
+	<a href="#"></a>
+  <p class="proj-description">Looking For Group</p>
+</figure>
 
-</div>
+<figure class="snip1205 green">
+  <img src="css/images/collab.jpg">
+  <i class="ion-search"></i>
+	<a href="#"></a>
+  <p class="proj-description">Collab-A-Comic</p>
+</figure>
 
-<!--IW-RPG Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#7F7F7F;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/Persona.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none; enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://shrouded-caverns-8468.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<text transform="matrix(1 0 0 1 -250.4999 364.2425)" class="st2 st3 st4">Persona Gamer</text>
-<!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
-	<!-- <div class= "para animated bounceInRight col-md-4" id="testpp"> -->
-	<!-- class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0s" -->
- <span class="text1"> <h class= "h"> <strong> Persona Gamer </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. This was the first application I created. I initially used traitify's API but found the restricted use of the API hindered the usage of the site. I then decided to build a replica of Traitify's API using javascript and jQuery. </p>
-  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, Bootstrap</strong> </p> </span>
-</div>
-</div>
+<figure class="snip1205 green">
+  <img src="css/images/saku.png">
+  <i class="ion-search"></i>
+	<a href="#"></a>
+  <p class="proj-description">Project Sakura</p>
+</figure>
 
-
-<!--LFG Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st40{fill:#0F9D58;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st40" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
-<path id="base" class="st40" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
-<image style="display:none; enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://lfg-meetup.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text> -->
-<!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
-<text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text>
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> LFG </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> LFG is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. I collaborated with three other group members to create a website built mainly from Ruby on Rails. On the back-end, I worked on routings, authorizations, validations and seeded data while on the front-end, I worked on CSS stylings and some design work. </p>
-  <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design</strong> </p> </span>
-</div>
-</div>
-
-
-<!--COLLAB-A-COMIC Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st20{fill:#BFAD59;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/collab.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
-<image style="enable-background:new;" width="2758" height="1600" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://collabacomic.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text> -->
-<text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text>
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> Collab-a-Comic </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. The website was created through ruby on rails for the front-end and PostgreSQL for the backend.  </p>
-  <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</strong> </p> </span>
-</div>
-</div>
 </div>
 
 </body>
