added pages for each project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(function() {
 								 <a class="page-scroll" href="#about">About Me</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#Projects">Projects</a>
+								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#skills">Skills</a>
@@ -226,9 +226,6 @@ $(function() {
 <image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
 </a>
 </image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text> -->
-<!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
 <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text>
 </svg>
 </div>
