--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@ $(function() {
 </script>
 </head> -->
 
-<body>
+<body id="project-body">
 
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
@@ -55,7 +55,7 @@ $(function() {
 								 <a class="page-scroll" href="#about">About Me</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#Projects">Projects</a>
+								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#skills">Skills</a>
@@ -70,35 +70,35 @@ $(function() {
  <!-- /.container-fluid -->
 </nav>
 
-<div class="`row` text-center" id="Projects">
+<div class="row" "text-center" id="Projects">
 <h2>Projects</h2>
 
 <!--Image 1-->
 <figure class="snip1205 green">
   <img src="css/images/Persona.jpg">
   <i class="ion-search"></i>
-	<a href="#"></a>
+	<a href="persona.html"></a>
   <p class="proj-description">Persona Gamer</p>
 </figure>
 
-<figure class="snip1205 green">
-  <img src="css/images/lfg-2.png">
+<figure class="snip1205 gray">
+  <img height="230" src="css/images/lfg-2.png">
   <i class="ion-search"></i>
-	<a href="#"></a>
+	<a href="lfg.html"></a>
   <p class="proj-description">Looking For Group</p>
 </figure>
 
-<figure class="snip1205 green">
+<figure class="snip1205 gold">
   <img src="css/images/collab.jpg">
   <i class="ion-search"></i>
-	<a href="#"></a>
+	<a href="collab.html"></a>
   <p class="proj-description">Collab-A-Comic</p>
 </figure>
 
-<figure class="snip1205 green">
+<figure class="snip1205 pink">
   <img src="css/images/saku.png">
   <i class="ion-search"></i>
-	<a href="#"></a>
+	<a href="saku.html"></a>
   <p class="proj-description">Project Sakura</p>
 </figure>
 
