modifying project pages

--- a/collab.html
+++ b/collab.html
@@ -38,8 +38,8 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
@@ -61,6 +61,7 @@
 </nav>
 
 <h2 class="proj-title"> Collab-A-Comic </h2>
+<hr>
 <!--LFG Image-->
 <div class="row PJCT">
 <div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
