--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ $(function() {
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
