--- a/lfg.html
+++ b/lfg.html
@@ -38,8 +38,8 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
@@ -62,6 +62,7 @@
 
 
 <h2 class="proj-title"> Looking for Group </h2>
+<hr>
 <!--IW-RPG Image-->
 <!--LFG Image-->
 <div class="row PJCT">
