--- a/saku.html
+++ b/saku.html
@@ -38,8 +38,8 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
@@ -61,6 +61,7 @@
 </nav>
 
 <h2 class="proj-title"> Project Sakura </h2>
+<hr>
 <!--Project Sakura Image-->
 <div class="row PJCT">
 <div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
@@ -79,8 +80,6 @@
 </style>
 <path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
 <path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
 <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
