--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@ $(function() {
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
@@ -71,7 +71,8 @@ $(function() {
 </nav>
 
 <div class="row" "text-center" id="Projects">
-<h2>Projects</h2>
+<h2 class="proj-title">Projects</h2>
+<hr>
 
 <!--Image 1-->
 <figure class="snip1205 green">
